# OpenTTD

./: CMakeLists.txt  Makefile.src.in  README.md  azure-pipelines-ci.yml  source.list  vcpkg.json
.github/workflows/: ci-build.yml  ci-linux.yml  ci-macos.yml  ci-mingw.yml  ci-windows.yml  codeql.yml  preview-build.yml  preview-publish.yml  preview_build.yml  rebase-checker.yml  release-linux.yml  release-macos.yml  release-source.yml  release-windows-store.yml  release-windows.yml  release.yml
azure-pipelines/templates/: ci-opengfx.yml  linux-build.yml  osx-build.yml  release.yml  windows-build.yml
cmake/: AddCustomXXXTimestamp.cmake  AutodetectEditbin.cmake  AutodetectGrfcodec.cmake  AutodetectLibrary.cmake  AutodetectSSE.cmake  AutodetectXaudio2.cmake  CPackSourceIgnore.cmake  CompileFlags.cmake  ConfigOptions.cmake  CreateGrfCommand.cmake  CreateRegression.cmake  Endian.cmake  FindVersion.cmake  InstallAndPackage.cmake  LinkPackage.cmake  OpenTTD.cmake  Options.cmake  Regression.cmake  SourceList.cmake  SourceList2.cmake
cmake/scripts/: Baseset.cmake  CreateGRF.cmake  FindVersion.cmake  Regression.cmake  SquirrelExport.cmake
media/baseset/: CMakeLists.txt  no_music.obm  no_sound.obs  openttd.grf  orig_dos.obg  orig_dos.obm  orig_dos.obs  orig_dos_de.obg  orig_tto.obm  orig_win.obg  orig_win.obm  orig_win.obs
media/baseset/openttd/: openttdgui.nfo
projects/: determineversion.vbs
regression/regression/: info.nut  main.nut  result.txt
regression/stationlist/: info.nut  main.nut
src/: CMakeLists.txt  aircraft_cmd.cpp  airport_gui.cpp  autoreplace_cmd.cpp  autoreplace_gui.cpp  base_media_func.h  build_vehicle_gui.cpp  cargo_type.h  company_gui.cpp  console.cpp  console_cmds.cpp  console_gui.cpp  console_internal.h  crashlog.cpp  depot_gui.cpp  dock_gui.cpp  elrail.cpp  engine_gui.cpp  error_gui.cpp  fileio.cpp  fileio_type.h  fios_gui.cpp  genworld.cpp  genworld_gui.cpp  goal_gui.cpp  graph_gui.cpp  ground_vehicle.cpp  group.h  group_gui.cpp  industry_cmd.cpp  industry_gui.cpp  intro_gui.cpp  main_gui.cpp  misc_gui.cpp  mixer.cpp  music_gui.cpp  newgrf.cpp  newgrf_debug_gui.cpp  newgrf_gui.cpp  newgrf_sound.cpp  (+58 more)
src/ai/: CMakeLists.txt  ai_core.cpp  ai_gui.cpp  ai_info.cpp  ai_info.hpp
src/blitter/: CMakeLists.txt
src/core/: CMakeLists.txt  endian_type.hpp  pool_type.hpp
src/game/: CMakeLists.txt  game_core.cpp  game_info.cpp  game_info.hpp  game_instance.cpp  game_text.cpp  game_text.hpp
src/lang/: CMakeLists.txt  afrikaans.txt  arabic_egypt.txt  basque.txt  belarusian.txt  brazilian_portuguese.txt  bulgarian.txt  catalan.txt  croatian.txt  czech.txt  danish.txt  dutch.txt  english.txt  english_AU.txt  english_US.txt  esperanto.txt  estonian.txt  faroese.txt  finnish.txt  french.txt  gaelic.txt  galician.txt  german.txt  greek.txt  hebrew.txt  hungarian.txt  icelandic.txt  indonesian.txt  irish.txt  italian.txt  japanese.txt  korean.txt  latin.txt  latvian.txt  lithuanian.txt  luxembourgish.txt  malay.txt  norwegian_bokmal.txt  norwegian_nynorsk.txt  polish.txt  (+17 more)
src/lang/unfinished/: frisian.txt  persian.txt
src/linkgraph/: CMakeLists.txt  linkgraph_gui.cpp  linkgraph_gui.h
src/misc/: CMakeLists.txt
src/music/: CMakeLists.txt  dmusic.cpp
src/network/: CMakeLists.txt  network.cpp  network_chat_gui.cpp  network_client.cpp  network_content_gui.cpp  network_coordinator.cpp  network_gui.cpp  network_server.cpp
src/network/core/: CMakeLists.txt  address.cpp  address.h  config.h  tcp_connect.cpp  tcp_listen.h
src/os/: CMakeLists.txt
src/os/macosx/: CMakeLists.txt  string_osx.cpp
src/os/os2/: CMakeLists.txt
src/os/unix/: CMakeLists.txt
src/os/windows/: CMakeLists.txt  font_win32.cpp  ottdres.rc.in  string_uniscribe.cpp  string_uniscribe.h  win32.cpp  win32.h
src/pathfinder/: CMakeLists.txt  follow_track.hpp  viewport_pfoverlay.cpp  viewport_pfoverlay.h
src/pathfinder/npf/: CMakeLists.txt  npf.cpp
src/pathfinder/opf/: CMakeLists.txt
src/pathfinder/yapf/: CMakeLists.txt  yapf.h  yapf_base.hpp  yapf_destrail.hpp  yapf_ship.cpp
src/saveload/: CMakeLists.txt  ai_sl.cpp  airport_sl.cpp  animated_tile_sl.cpp  autoreplace_sl.cpp  cargomonitor_sl.cpp  cargopacket_sl.cpp  cheat_sl.cpp  company_sl.cpp  depot_sl.cpp  economy_sl.cpp  engine_sl.cpp  game_sl.cpp  gamelog_sl.cpp  goal_sl.cpp  group_sl.cpp  industry_sl.cpp  labelmaps_sl.cpp  linkgraph_sl.cpp  map_sl.cpp  misc_sl.cpp  newgrf_sl.cpp  object_sl.cpp  order_sl.cpp  saveload.cpp  saveload.h  settings_sl.cpp  signs_sl.cpp  station_sl.cpp  storage_sl.cpp  story_sl.cpp  strings_sl.cpp  subsidy_sl.cpp  town_sl.cpp  vehicle_sl.cpp  waypoint_sl.cpp
src/script/: CMakeLists.txt  script_gui.cpp  script_instance.cpp  squirrel.cpp  squirrel.hpp  squirrel_class.hpp
src/script/api/: CMakeLists.txt  ai_changelog.hpp  doxygen_filter.awk  game_changelog.hpp  script_airport.cpp  script_airport.hpp  script_engine.cpp  script_engine.hpp  script_grouplist.cpp  script_grouplist.hpp  script_industrylist.cpp  script_industrylist.hpp  script_info_docs.hpp  script_list.cpp  script_list.hpp  script_signlist.cpp  script_signlist.hpp  script_stationlist.cpp  script_stationlist.hpp  script_storypageelementlist.cpp  script_storypageelementlist.hpp  script_storypagelist.cpp  script_storypagelist.hpp  script_subsidylist.cpp  script_subsidylist.hpp  script_text.cpp  script_text.hpp  script_townlist.cpp  script_townlist.hpp  script_vehiclelist.cpp  script_vehiclelist.hpp  script_waypointlist.cpp  script_waypointlist.hpp
src/settingsgen/: CMakeLists.txt
src/sound/: CMakeLists.txt  xaudio2_s.cpp
src/spriteloader/: CMakeLists.txt
src/strgen/: CMakeLists.txt  strgen_base.cpp
src/table/: CMakeLists.txt  settings.h.preamble  strgen_tables.h
src/table/settings/: company_settings.ini  currency_settings.ini  gameopt_settings.ini  misc_settings.ini  settings.ini  win32_settings.ini  window_settings.ini
src/thread/: CMakeLists.txt
src/video/: CMakeLists.txt
src/video/cocoa/: CMakeLists.txt  cocoa_wnd.mm
src/widgets/: CMakeLists.txt
